src/style/Header.scss
.Header {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1000;
  width: 100%;
  height: 100px;
  background: white;
  color: #32325d;
  // border-bottom: 1px solid lightgray;
  // box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
  //   0 15px 40px rgba(166, 173, 201, 0.2);
}

.Header__actions {
  position: relative;
}

.Header__logo {
  margin: auto;
  height: 100%;
  width: 5em;
  padding: 0.5em 0;
}

.Header__cart {
  position: absolute;
  margin: 2.25em 0;
  left: 5em;
  // padding: 0;
  cursor: pointer;
  background-color: transparent;
  border: none;
  // &:hover {
  //   background-color: lightgray;
  // }
}

.Header__cart__link {
  text-decoration: none;
}

.Header__cart__icon {
  fill: lightgrey;
  height: auto;
  width: 24px;
  padding-top: 0.25em;
}

.Header__cart__total {
  position: relative;
  color: red;
  top: -20px;
  left: 1px;
  // right: -1px;
  font-weight: bold;
}

